# actions

./: .gitignore  .gitmodules  CMakeLists.txt  setup.py
.github/: install_macos_dependencies.sh  install_ubuntu_dependencies.sh
.github/workflows/: pip.yml  wheels-release.yml  wheels.yml
cmake/: FindMKL.cmake
src/: main.cpp
